fixed header image url

--- a/_layouts/answer.html
+++ b/_layouts/answer.html
@@ -11,7 +11,7 @@
 
 <body>
 	<header id="banner">
-		<img alt="Marietta College" id="logo" src="../../images/hdimg.jpg">
+		<img alt="Marietta College" id="logo" src="../images/hdimg.jpg">
 	</header>
 	<main>
 		{% if page.topic %}
