--- a/_layouts/topic.html
+++ b/_layouts/topic.html
@@ -19,7 +19,7 @@
 		<ul class="question_list">
 			{% for answer in site.answers %}
 				{% if answer.topic == page.topic or answer.topics contains page.topic %}
-					<li><a href="..{{ answer.url }}">{{ answer.question }}</a></li>
+					<li><a href="{{ answer.url }}">{{ answer.question }}</a></li>
 				{% endif %}
 			{% endfor %}
 		</ul>
