--- a/_layouts/answer.html
+++ b/_layouts/answer.html
@@ -7,6 +7,7 @@
 	<title>{{page.title}}</title>
 	<link href="../faq.css" rel="stylesheet" type="text/css">
 	<link href="../topics.css" rel="stylesheet" type="text/css">
+	<link rel="icon" href="../favicon.ico" type="image/x-icon" />
 </head>
 
 <body>
